# plainspeak

./: .gitignore  README.md  SUBMISSION.md  app.py  pyproject.toml
.github/workflows/: ci.yml
examples/: demo.py
src/plainspeak/: __init__.py  backends.py  core.py  redact.py
tests/: test_plainspeak.py
