[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "plainspeak"
version = "0.1.0"
description = "Turn dense official letters (benefits, medical, legal) into plain language, an action checklist, and key dates. Strips PII before any LLM call. Ships a keyless deterministic backend so it runs anywhere."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Mukunda Rao Katta", email = "mukunda.vjcs6@gmail.com" }]
keywords = [
  "ai",
  "llm",
  "accessibility",
  "plain-language",
  "social-good",
  "pii-redaction",
  "readability",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
dashboard = ["streamlit>=1.40"]
gemini = ["google-genai>=0.3"]
anthropic = ["anthropic>=0.109.1"]
ollama = ["httpx>=0.27"]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.urls]
Homepage = "https://github.com/MukundaKatta/plainspeak"
Source = "https://github.com/MukundaKatta/plainspeak"
Issues = "https://github.com/MukundaKatta/plainspeak/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/plainspeak"]
